recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:15: error: Missing closing brace `}' assumed here
}
^